fix spacing

--- a/src/styles/animateImage.css
+++ b/src/styles/animateImage.css
@@ -15,6 +15,6 @@
 }
 
 .fade-in.show {
-  animation: fadeInUp 1s ease-out forwards;
+  animation: fadeInUp 0.5s ease-out forwards;
 }
 
